@@ -1,3 +1,9 @@
+2005-10-06  Sam Steingold  <sds@gnu.org>
+
+	* modules/rawsock/rawsock.c (SOCK-LISTEN): renamed from LISTEN
+	* modules/rawsock/sock.lisp (LISTEN): do not shadow the CL symbol
+	(SOCK-LISTEN): export
+
 2005-10-05  Sam Steingold  <sds@gnu.org>
 
 	* modules/readline/configure.in: abort when readline is not used
